--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,14 @@
     <title>Pulse AirDAO</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      AIR is a unique DeFi product that connects with a real-world asset which
+      is experiencing unprecedented demand pressure across both voluntary
+      markets and compliance markets. Even in the face of the COVID-fueled
+      market crash of 2020, carbon markets pretty much walked away unscathed,
+      have since seen strong demand growth, and are now entering a period of
+      price discovery.
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
